# adjacency

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: dev-guide.md  index.md  next_steps_after_the_split.md
docs/api/: backends.md  core.md  index.md  participants.md  purposes.md
docs/architecture/: core_architecture.md  gui_architecture.md  index.md  source_monitoring_annotation.md  source_monitoring_web_ui.md
docs/plans/: 2026-03-25-source-monitoring-annotation-cto-import-pr-plan.md
src/adjacency/: __init__.py  __main__.py  cli.py  events.py  interaction_renderer.py  librarian.py  profiles.py  protocol.py  session.py  session_factory.py  source_monitoring.py  source_monitoring_web.py
src/adjacency/backends/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai_compatible.py
src/adjacency/participants/: base.py  llm.py  resolver.py  scripted.py
src/adjacency/purposes/: base.py  moderator.py  participant.py
tests/: conftest.py
tests/adjacency/: doctor_patient_knee_cto.json  test_adjacency_purpose.py  test_cli.py  test_events.py  test_llm_participant.py  test_participant_purposes.py  test_protocol.py  test_resolver.py  test_session.py  test_session_factory.py  test_socratic.py  test_source_monitoring.py
tools/: black_check.py
